# services/analytics-svc/api/swagger/swagger.yaml
@@ -1169,7 +1169,7 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/Error"
-  /alpdb/{databaseType}/database/{tenant}/cdmversion/schema/{schemaName}:
+  /alpdb/cdmversion:
     x-swagger-router-controller: dbsvc
     get:
       description: Get CDM Version
@@ -1177,19 +1177,9 @@ paths:
       produces:
         - application/json
       parameters:
-        - name: databaseType
-          in: path
-          description: Dialect of database (Hana or Postgres)
-          required: true
-          type: string
-        - name: tenant
-          in: path
-          description: Tenant database name
-          required: true
-          type: string
-        - name: schemaName
-          in: path
-          description: Name of schema to retrieve CDM version from 
+        - name: datasetId
+          in: query
+          description: ID of dataset
           required: true
           type: string
       responses:
