# services/analytics-svc/src/api/controllers/dbsvc.ts
@@ -2,23 +2,28 @@ import { Logger } from "@alp/alp-base-utils";
 import * as config from "../../utils/DBSvcConfig";
 import * as dbUtils from "../../utils/DBSvcDBUtils";
 import { DBDAO } from "../../dao/DBDAO";
+import PortalServerAPI from "../PortalServerAPI";
 
 const logger = Logger.CreateLogger("analytics-log");
 
 export async function getCDMVersion(req, res, next) {
-    let dialect: string = req.swagger.params.databaseType.value;
-    let tenant: string = req.swagger.params.tenant.value;
-    let schema: string = req.swagger.params.schemaName.value;
+    const datasetId = req.swagger.params.datasetId.value;
+
+    const { dialect, databaseCode, schemaName } =
+        await new PortalServerAPI().getStudy(
+            req.headers.authorization,
+            datasetId
+        );
 
     try {
-        let dbDao = new DBDAO(dialect, tenant);
+        let dbDao = new DBDAO(dialect, databaseCode);
         const dbConnection = await dbDao.getDBConnectionByTenantPromise(
-            tenant,
+            databaseCode,
             req,
             res
         );
 
-        const cdmVersion = await dbDao.getCDMVersion(dbConnection, schema);
+        const cdmVersion = await dbDao.getCDMVersion(dbConnection, schemaName);
 
         let hanaKey = "CDM_VERSION";
         let cdmVersionKey =
@@ -33,7 +38,7 @@ export async function getCDMVersion(req, res, next) {
             message: "Something went wrong when retrieving data",
             data: [],
         };
-        res.status(200).json(httpResponse);
+        res.status(500).json(httpResponse);
     }
 }
 
@@ -71,7 +76,6 @@ export async function getSnapshotSchemaMetadata(req, res, next) {
     let schema = req.swagger.params.schemaName.value;
 
     try {
-
         let dbDao = new DBDAO(dialect, tenant);
         const dbConnection = await dbDao.getDBConnectionByTenantPromise(
             tenant,
